# ProduceDistributionSystem

./: .gitignore  BinaryHeap.h  CMakeLists.txt  Date.cpp  Date.h  DateParser.cpp  DateParser.h  Distributor.cpp  Distributor.h  FoodDist_DataSource.h  FoodDist_DataTester.cpp  FoodDist_DataTester.h  FoodDist_GUI.cpp  FoodDist_GUI.h  JSONP.cpp  JSONP.h  JSONPS.cpp  JSONPS.h  ProduceFactory.cpp  ProduceFactory.h  ProduceInterface.h  README.md  School.cpp  School.h  binaryHeap.h  foodDist.cpp  foodDistAdapter.h  foodDistMain.cpp  foodDistNotes.cpp  testJSONP.json
FoodControl/: ProduceFactory.cpp  ProduceFactory.h  ProduceInterface.cpp  ProduceInterface.h  ProduceWizard.cpp
FoodControl/Produce/: ProduceWizard  ProduceWizard.cpp  apple.h  carrots.h  lettuce.h  onions.h  squash.h  tomatoes.h
Produce/: Apple.h  Avocados.h  Carrot.h  Corn.h  GreenPepper.h  Lettuce.h  Onion.h  ProduceFactory.cpp  ProduceFactory.h  ProduceWizard.cpp  Produce_Wizard  Squash.h  Tomato.h  ifelse.txt  includes.txt
ProduceDistribution/: .gitignore  BinaryHeap.h  CMakeLists.txt  Distributor.cpp  Distributor.h  JSONOut.cpp  JSONOut.h  JSONP.cpp  JSONP.h  JSONPS.cpp  JSONPS.h  School.cpp  School.h  testJSONP.json  testJSONS.json
ProduceDistribution/UnitTests/: ProduceFactoryTesting.cpp  jsonTC.cpp  test00.cpp  testBinaryHeap.cpp  testDate.cpp  testDist.cpp  testProduce.cpp
ProduceDistribution/lib/Date/: Date.cpp  DateParser.cpp
ProduceDistribution/lib/FoodControl/: ProduceFactory.cpp  ProduceInterface.cpp  ProduceInterface.h
ProduceDistribution/lib/FoodControl/Produce/: apple.h  carrots.h  lettuce.h  onions.h  squash.h  tomatoes.h
UnitTests/: ProduceFactoryTesting.cpp  jsonTC.cpp  testDate.cpp  testDist.cpp  testProduce.cpp  testjson.cpp
lib/Date/: CMakeLists.txt
lib/FoodControl/: CMakeLists.txt  ProduceFactory.cpp  ProduceInterface.cpp  ProduceInterface.h  ProduceWiz
lib/FoodControl/Produce/: apple.h  carrots.h  lettuce.h  onions.h  squash.h  tomatoes.h
testcases/: CMakeLists.txt  jsonTC.cpp
testcases/buildTest/: CMakeCache.txt  Doxyfile.docs  Makefile  cmake_install.cmake
testcases/buildTest/lib/Catch2/: Makefile  cmake_install.cmake
testcases/buildTest/lib/Catch2/src/: Makefile  cmake_install.cmake
testcases/buildTest/lib/json-develop/: Makefile  cmake_install.cmake
